tools/coqui-tts/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: custom-coqui-tts-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
      - coqui-7frank.internal.jambit.io
  rules:
  - host: coqui-7frank.internal.jambit.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: custom-coqui-tts-deployment
            port:
              number: 8080
